# docs/spec/generated/openapi.json
@@ -186,7 +186,7 @@
                         "type": "string",
                         "enum": [
                           "MARKET_VALUE",
-                          "CGT_RETROSPECTIVE",
+                          "CGT",
                           "FAMILY_LAW",
                           "FINANCIAL_REPORTING",
                           "RENTAL_ASSESSMENT",
@@ -460,7 +460,7 @@
                         "type": "string",
                         "enum": [
                           "MARKET_VALUE",
-                          "CGT_RETROSPECTIVE",
+                          "CGT",
                           "FAMILY_LAW",
                           "FINANCIAL_REPORTING",
                           "RENTAL_ASSESSMENT",
